--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
 <form id="addItemForm">
     <label for="product">Item:</label>
-    <input type="text" id="product" required>
+    <input type="text" id="product" required><br>
     <label for="price">Precio:</label>
-    <input type="number" id="price" min="0" required>
+    <input type="number" id="price" min="0" required><br>
     <label for="quantity">Cant</label>
-    <input type="number" id="quantity" min="1" required>
+    <input type="number" id="quantity" min="1" required><br>
     <button type="submit">Agregar</button>
 </form>
 <br>
@@ -119,3 +119,4 @@
 <H5>https://www.linkedin.com/in/marcelo-javier-luna-dalla-lasta-7a57b71a6/</H5>
 </body>
 </html>
+
