--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <input type="number" id="quantity" min="1" required><br>
     <br>
     <button type="submit">Agregar</button>
+    <button type="button" onclick="clearList()">Limpiar Lista</button>
 </form>
 <br>
 <table id="shoppingList">
@@ -38,6 +39,7 @@
             <th>Precio</th>
             <th>Cant</th>
             <th>Total</th>
+            <th>Editar</th>
             <th>Quitar</th>
         </tr>
     </thead>
@@ -47,7 +49,7 @@
         <tr>
             <th colspan="3">Total</th>
             <td id="totalPrice"></td>
-            <td></td>
+            <td colspan="2"></td>
         </tr>
     </tfoot>
 </table>
@@ -80,6 +82,32 @@
         displayList();
     }
 
+    // Function to edit item in the list
+    function editItem(index) {
+        let shoppingList = JSON.parse(localStorage.getItem('shoppingList'));
+        const item = shoppingList[index];
+        
+        const newProduct = prompt('Nuevo nombre del producto:', item.product);
+        if (newProduct !== null) {
+            item.product = newProduct;
+        }
+
+        const newPrice = parseFloat(prompt('Nuevo precio:', item.price));
+        if (!isNaN(newPrice)) {
+            item.price = newPrice;
+        }
+
+        const newQuantity = parseInt(prompt('Nueva cantidad:', item.quantity));
+        if (!isNaN(newQuantity)) {
+            item.quantity = newQuantity;
+        }
+
+        item.totalPrice = item.price * item.quantity;
+
+        localStorage.setItem('shoppingList', JSON.stringify(shoppingList));
+        displayList();
+    }
+
     // Function to calculate total price
     function calculateTotal(shoppingList) {
         let total = 0;
@@ -103,13 +131,20 @@
                 <td>$${item.price}</td>
                 <td>${item.quantity}</td>
                 <td>$${item.totalPrice.toFixed(2)}</td>
-                <td><button onclick="removeItem(${index})">X</button></td>
+                <td><button onclick="editItem(${index})">Editar</button></td>
+                <td><button onclick="removeItem(${index})">Quitar</button></td>
             `;
             listBody.appendChild(row);
         });
 
         const totalPriceElement = document.getElementById('totalPrice');
         totalPriceElement.textContent = '$' + calculateTotal(shoppingList);
+    }
+
+    // Function to clear the list and local storage
+    function clearList() {
+        localStorage.removeItem('shoppingList');
+        displayList();
     }
 
     document.getElementById('addItemForm').addEventListener('submit', addItem);
