--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
 </script>
 <h5>Gracias por usar esta WebApp. </h5>
 <H5>https://www.linkedin.com/in/marcelo-javier-luna-dalla-lasta-7a57b71a6/</H5>
+   <H5> Inspirada en Enelsuper.netlify.app</H5>
 </body>
 </html>
 
